<resources>

    <!-- Commons -->
    <string name="add">Add</string>

    <!-- Main View-->
    <string name="app_name">Random Wallpaper</string>
    <string name="title_featured_collections">Featured Collections</string>
    <string name="title_curated_collections">Curated Collections</string>
    <string name="title_collections">Collections</string>
    <!-- Main View Menu -->
    <string name="main_menu_settings">Settings</string>
    <string name="setting_update_interval">Update interval</string>

    <!-- Settings View-->
    <string name="title_settings">Settings</string>
    <string name="title_channels">Channels</string>
    <!-- Select Interval Dialog -->
    <string name="select_interval_dialog_title">Set update interval</string>
    <string name="interval_15_mins">15 mins</string>
    <string name="interval_half_hour">Half hour</string>
    <string name="interval_hour">1 hour</string>
    <string name="interval_half_day">Half day</string>
    <string name="interval_day">1 day</string>
    <!-- Add Channel Dialog -->
    <string name="add_channel_dialog_title">Add a channel</string>
    <string name="add_channel_name_hint">Channel name</string>
    <string name="add_channel_id_hint">ID (i.e. 12345)</string>
    <!-- Delete Channel Warning -->
    <string name="delete_channel_warning_title">Warning</string>
    <string name="delete_channel_warning_body">Do you want to delete %s?</string>

    <!-- Notifications -->
    <string name="notification_in_progress_title">Updating wallpaper</string>
    <string name="notification_in_progress_text">Please wait a bit</string>
    <string name="notification_complete_title">Wallpaper changed!</string>
    <string name="notification_complete_text">Don\'t like it? Click the NEW button!</string>
    <string name="notification_try_again_title">Error!</string>
    <string name="notification_try_again_text">We\'re unable to get your wallpaper</string>
    <string name="notification_new">NEW</string>
    <string name="notification_try_again">TRY AGAIN</string>
</resources>
