<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/select_interval_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/intervalRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/intervalFifteenMins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interval_15_mins" />

        <RadioButton
            android:id="@+id/intervalHalfHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interval_half_hour" />

        <RadioButton
            android:id="@+id/intervalHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interval_hour" />

        <RadioButton
            android:id="@+id/intervalHalfDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interval_half_day" />

        <RadioButton
            android:id="@+id/intervalDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interval_day"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="79dp" />
    </RadioGroup>

    <Button
        android:id="@+id/okButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intervalRadioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/okButton"
        app:layout_constraintTop_toBottomOf="@+id/intervalRadioGroup" />

</android.support.constraint.ConstraintLayout>